<?xml version="1.0"?>
<package>
  <name>krl_msgs</name>
  <version>1.0.0</version>
  <description>Messages for the KRL on KRC2</description>

  <maintainer email="hoarau@isir.upmc.fr">Antoine Hoarau</maintainer>

  <license>CeCILL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
