<?xml version="1.0"?>
<package>
  <name>rtt_lwr_controllers</name>
  <version>0.1.0</version>
  <description>The rtt_lwr_controllers package</description>

  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rtt_lwr_example</run_depend>
  
  <export>
  </export>
</package>
