<?xml version="1.0"?>
<package>
  <name>rtt_lwr_controllers</name>
  <version>0.1.0</version>
  <description>The rtt_lwr_controllers package</description>

  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rtt_lwr_example</run_depend>
  <run_depend>rtt_lwr_cart_example</run_depend>
  <run_depend>rtt_dynamics_analysis</run_depend>
  <run_depend>rtt_lwr_krl_tool</run_depend>
  <run_depend>rtt_lwr_jt_controller</run_depend>
  <run_depend>rtt_state_publisher</run_depend>
  <run_depend>krl_msgs</run_depend>
  
  <export>
  </export>
</package>
