<?xml version="1.0"?>
<package>
  <name>rtt_state_publisher</name>
  <version>1.0.0</version>
  <description>Simple joint state publisher for orocos</description>
  <maintainer email="hoarau.robotics@tgmail.com">hoarau</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt_rosparam</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>rtt_rosparam</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_sensor_msgs</plugin_depend>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_rosclock</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
    </rtt_ros>
  </export>
</package>
